--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 									<ul>
 										<li><a href="#">Criptomoeda</a></li>
 										<li><a href="#">Investir em Ações</a></li>
-										<li><a href="#">Investimento Imobiliário</a></li>
+										<li><a href="#">Fundos Imobiliário</a></li>
 										<li>
 											<a href="#">Rendas &hellip;</a>
 											<ul>
@@ -141,7 +141,7 @@
 						<article>
 							<a href="#" class="image featured"><img src="images/mobilia3.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Investimento Imobiliário</a></h3>
+								<h3><a href="#">Fundo Imobiliário</a></h3>
 							</header>
 							<p>São aqueles com base em ativos do mercado de imóveis: terrenos, casas, edifícios, prédios comerciais, dentre tantas outras categorias.</p>
 						</article>
