--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -37,7 +37,7 @@
 								<ul>
 									<li><a href="#">Criptomoeda</a></li>
 									<li><a href="#">Investir em Ações</a></li>
-									<li><a href="#">Investimento Imobiliário</a></li>
+									<li><a href="#">Fundos Imobiliário</a></li>
 									<li>
 										<a href="#">Rendas &hellip;</a>
 										<ul>
